# prologix-gpib-ethernet

./: pyproject.toml
plx_gpib_ethernet/: plx_gpib_ethernet.py
src/plx_gpib_ethernet/: plx_gpib_ethernet.py
tests/: plx_gpib_ethernet_test.py
