[project]
name = "prologix-gpib-ethernet"
version = "0.2.1"
description='Simple wrapper for the Prologix GPIB-to-Ethernet adapter.'
authors = [
    {name = 'Nelson Darkwah Oppong', email='n@darkwahoppong.com'},
    {name = "Simon Hobbs", email = "simon.hobbs@electrooptical.net"},
]
readme = "README.md"

requires-python = ">=3.9"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
  "pyserial"
]

[tool.setuptools.packages.find]
where = ["src", "src/plx_gpib_ethernet"]

[tool.pylint]
max-line-length = 200
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
    "C0301",
    "W1203",
    "C0209"
]
